--- a/pom.xml
+++ b/pom.xml
@@ -69,17 +69,23 @@
 					</excludes>
 				</configuration>
 			</plugin>
+
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.12.0</version> <!-- Updated version -->
 				<configuration>
-					<annotationProcessorPaths>
-						<path>
-							<groupId>org.projectlombok</groupId>
-							<artifactId>lombok</artifactId>
-						</path>
-					</annotationProcessorPaths>
+					<source>21</source>
+					<target>21</target>
+					<release>21</release> <!-- Added release configuration -->
 				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>com.heroku.sdk</groupId>
+				<artifactId>heroku-maven-plugin</artifactId>
+				<version>3.0.8</version> <!-- Updated to a more recent version -->
 			</plugin>
 		</plugins>
 	</build>
